<resources>
    <string name="app_name">LifePlusBdTask</string>
    <string name="logo">logo</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Registration</string>
    <string name="don_t_have_account">don\'t have account?</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="slider_description">When the love of his life is compelled to wed another, a gifted yet volatile young surgeon spirals into self-destruction.</string>
</resources>