<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_25sdp"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        style="@style/LogoImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name_lay"
        style="@style/TextInputLayoutStyle"
        android:hint="@string/user_name"
        android:layout_marginTop="0dp"
        app:placeholderText="Enter your user name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name"
            style="@style/EditTextStyle"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_lay"
        style="@style/TextInputLayoutStyle"
        android:hint="@string/password"
        app:placeholderText="Enter your password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name_lay"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            style="@style/EditTextStyle"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/login"
        android:padding="@dimen/_8sdp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/password_lay" />

    <TextView
        android:id="@+id/dont_have_account"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_account"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintEnd_toStartOf="@id/registration"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:text="@string/register"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="@id/dont_have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dont_have_account"
        app:layout_constraintTop_toTopOf="@id/dont_have_account" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="193dp" />

</androidx.constraintlayout.widget.ConstraintLayout>