<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_25sdp"
    tools:context=".ui.registration.RegistrationActivity">

    <ImageView
        android:id="@+id/logo"
        style="@style/LogoImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_lay"
        style="@style/TextInputLayoutStyle"
        android:hint="@string/name"
        android:layout_marginTop="0dp"
        app:placeholderText="Enter your name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            style="@style/EditTextStyle"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name_lay"
        style="@style/TextInputLayoutStyle"
        android:hint="@string/user_name"
        app:placeholderText="Enter your user name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_lay">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name"
            style="@style/EditTextStyle"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_phone_lay"
        style="@style/TextInputLayoutStyle"
        android:hint="@string/phone"
        app:placeholderText="Enter your user name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name_lay">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_phone"
            style="@style/EditTextStyle"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_lay"
        style="@style/TextInputLayoutStyle"
        android:hint="@string/password"
        app:placeholderText="Enter your password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_phone_lay"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            style="@style/EditTextStyle"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/register"
        android:padding="@dimen/_8sdp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/password_lay" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="193dp" />


</androidx.constraintlayout.widget.ConstraintLayout>